// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
  href={null}
  id={null}
  media={null}
  onClick={null}
>
  <div
    className="Bar__BarLayout-icfo76-2 eUVQsH"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 boCGaE"
    >
      <div
        className="Avatar__TagContainer-sc-1vuf9om-2 bHaSpo"
        id={null}
        onClick={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="check"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bOWYHS"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
        id={null}
        rows={null}
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Your payment method has been updated.
        </h6>
      </section>
    </div>
    <div
      className="Bar__Slot-icfo76-1 cxljst"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
        color={null}
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hDFGtQ Card__CardGridWrapper-sc-1g3s676-4 gDrraz"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 kjRVjO"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            The latest version of LandVision is available for update.
          </h6>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 bHaSpo"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="check"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Project has successfully been added to the list.
          </h6>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 cMrzfM"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-exclamation fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="exclamation"
            data-prefix="fas"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            No results returned. Query is too big and needs to be filtered.
          </h6>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 cNGXUJ"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Payment did not go through successfully.
          </h6>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hDFGtQ Card__CardGridWrapper-sc-1g3s676-4 gDrraz"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jGhkbe"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 kjRVjO"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            This service is not available with your plan.
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Upgrade to premium to take advantage of this feature.
          </p>
          <a
            className="Typography__LinkText-sc-19auepv-1 jOFdDS"
            fontSize="0.876em"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            Upgrade
          </a>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 fOhtjo Banner__StyledBanner-sc-6825al-0 bfAGjz"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jGhkbe"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 cNGXUJ"
          id={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="times"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 bOWYHS"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
          id={null}
          rows={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Payment did not go through successfully.
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Update payment information in order to complete transaction.
          </p>
          <a
            className="Typography__LinkText-sc-19auepv-1 jOFdDS"
            fontSize="0.876em"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            Update Payment
          </a>
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Banner__Close-sc-6825al-1 cgOoTm"
          color={null}
          data-icon="times"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</section>
`;
